--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ REACT_APP_PROJECT_ID=feedsouthflorida-40289
 REACT_APP_STORAGE_BUCKET=feedsouthflorida-40289.appspot.com
 REACT_APP_MESSAGING_SENDER_ID=74735929167
 REACT_APP_APP_ID=1:74735929167:web:a3b7749b689d08e5f9e73a
+
+REACT_APP_LOG_MEAL_KEY=1ed77f31f6336a6b25dc33ace695c2b9e9b2f759
