--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@ REACT_APP_PROJECT_ID=feedsouthflorida-40289
 REACT_APP_STORAGE_BUCKET=feedsouthflorida-40289.appspot.com
 REACT_APP_MESSAGING_SENDER_ID=74735929167
 REACT_APP_APP_ID=1:74735929167:web:a3b7749b689d08e5f9e73a
+
+
+REACT_APP_BARCODE_KEY=c669624a047dd44b349464cab662c714
+
+REACT_APP_APP_KEY=58aee40e
+
+
