--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "name": "feedsouthflorida",
   "version": "0.1.0",
   "private": true,
@@ -41,7 +40,6 @@
       "last 1 safari version"
     ]
   }
-=======
 	"name": "feedsouthflorida",
 	"version": "0.1.0",
 	"private": true,
@@ -51,38 +49,23 @@
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.21.0",
 		"firebase": "^7.24.0",
-		"form-data": "^3.0.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
-		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.0",
-		"react-webcam": "^5.2.1",
+		"react-webcam-barcode-scanner": "^0.0.2-rc2",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"deploy": "yarn build && firebase deploy --only hosting"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"extends": [ "react-app", "react-app/jest" ]
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	}
->>>>>>> Setup Routing
 }
