--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "firebase": "^7.24.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-map-gl": "^5.2.9",
+    "react-mapbox-gl": "^5.0.0",
     "react-scripts": "4.0.0",
     "react-webcam-barcode-scanner": "^0.0.2-rc2",
     "web-vitals": "^0.2.4"
